--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                 <a class="disponivel" href="">
                   <div class="fotoProduto">
                     <figure>
-                      <img src="./Faça seu pedido!_files/moranguito.webp" width="110px" height="110px" loading="lazy">
+                      <img src="moranguito.webp" width="110px" height="110px" loading="lazy">
                     </figure>
                     </div>
                   <div class="texto">
