--- a/index.html
+++ b/index.html
@@ -1761,7 +1761,7 @@
                 </div>
                 <!-- <div class="fotoProduto" style="margin-left: 15px;">
 						<figure style="margin: 0;">
-							<img src="/images/relato12.jpg" width="70px" height="70px" loading="lazy" style="border-radius: 8px;">
+							<img src="./images/relato12.jpg" width="70px" height="70px" loading="lazy" style="border-radius: 8px;">
 						</figure>
 					</div> -->
               </div>
