--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ fbq('track', 'PageView');
 <!-- COUNTDOWN TIMER COM CORES VERMELHAS -->
 <div class="my-6 px-2 sm:px-0">
 <div class="bg-red-100 border-2 border-dashed border-red-500 rounded-lg p-4 text-center">
-<h3 class="text-lg font-bold text-red-700 mb-2">A PROMOÇÃO ACABA EM:</h3>
+<h3 class="text-lg font-bold text-red-700 mb-2">A PROMOÇÃO ACABA EM:<10:00/h3>
 <div class="flex justify-center items-center gap-4">
 <div class="text-center">
 <span class="text-4xl font-bold text-white bg-red-600 rounded-lg px-3 py-1" id="minutes">00</span>
